# OpenGL_Template

./: .gitmodules  BuildTest.sh  BuildTest_Prime.sh  CMakeLists.txt  MakeScripts.sh  MakeScripts_prime.sh  README.md  init.sh
Source/dependence/Shader/: Shader.cpp  Shader.h
Source/include/: Texture.hpp  shader.hpp
Source/shader/: a.fs  dot.fs  dot.vs
Source/src/: main.cpp
src/: main.cpp
